Fixes overflow issue on year in mainNav (#2064)

--- a/src/styles/components/mainNav/_company.sass
+++ b/src/styles/components/mainNav/_company.sass
@@ -54,8 +54,17 @@ uni-company-dropdown
         border-left: $size solid transparent
         border-right: $size solid transparent
 
+.navbar_company_title_name
+    max-width: 12rem
+    display: block
+    overflow: hidden
+    text-overflow: ellipsis
+    float: left
+
 .navbar_company_title_year
     opacity: .75
+    display: inline-block
+    margin: 0 .5rem
 
 .navbar_company_dropdown
     @extend %mainNavDropdown
